[package]
edition = "2021"
name = "pizza-platz-supplier"
version = "0.1.0"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
anyhow = "1.0.57"
env_logger = "0.9.0"
log = "0.4.17"
platz-sdk = "0.4.3"
serde = {version = "1.0.137", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
